--- a/templates/mod_replys.html
+++ b/templates/mod_replys.html
@@ -34,6 +34,7 @@
     <hr>
     <br>
     <a href="#" class="MarkMightFakeBtn">Mark/Unmark</a><a href="#" class="HideBtn">Hide/Unhide</a>
+    <input type="hidden" id="csrf_token" value="{{ csrf_token() }}"/>
     <br><br>
     <hr>
     <hr>
